--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,6 @@ dependencies {
 
     //원형 이미지뷰 가져오기
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    //리사이클러뷰
+    implementation 'androidx.recyclerview:recyclerview:1.3.1'
 }
