--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,9 +38,15 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation(platform("com.google.firebase:firebase-bom:32.3.1"))
+    implementation("com.google.firebase:firebase-database")
+    implementation("com.google.firebase:firebase-analytics")
+    implementation 'com.google.firebase:firebase-storage'
 
     //원형 이미지뷰 가져오기
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     //리사이클러뷰
     implementation 'androidx.recyclerview:recyclerview:1.3.1'
+    //텍스트인풋레이아웃
+    implementation 'com.google.android.material:material:1.9.0'
 }
