시작하면 배경음악 14초 정도 재생 도중에 나가면 음악 중지하고 다시 재생 안 함

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,5 +47,9 @@
         <activity android:name=".Utils.TestAdd"
             android:exported="true">
         </activity>
+        <service
+            android:name=".MusicService"
+            android:enabled="true"
+            android:exported="false" />
     </application>
 </manifest>
