--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,9 @@
         <activity android:name=".LoginActivity"
             android:exported="true">
         </activity>
+        <activity android:name=".PickMusic"
+            android:exported="true">
+        </activity>
 
         <activity android:name=".RegisterActivity"
             android:exported="true">
