설정 페이지 이제 만들려고 합니다

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,9 @@
         <activity android:name=".Utils.TestAdd"
             android:exported="true">
         </activity>
+        <activity android:name=".SettingActivity"
+            android:exported="true">
+        </activity>
         <service
             android:name=".MusicService"
             android:enabled="true"
