폰에서 wav파일 선택, 재생, 업로드 기능만

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,9 +47,13 @@
             android:exported="true">
         </activity>
 
+        <activity android:name=".AddMusic"
+            android:exported="true">
+        </activity>
         <activity android:name=".Utils.TestAdd"
             android:exported="true">
         </activity>
+
         <activity android:name=".SettingActivity"
             android:exported="true">
         </activity>
