--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,9 @@
         <activity android:name=".SettingActivity"
             android:exported="true">
         </activity>
+        <activity android:name=".TestParent"
+            android:exported="true">
+        </activity>
         <service
             android:name=".MusicService"
             android:enabled="true"
