피아노 구현까지 완료 녹음 버튼, 녹음해서 파일 새로 올리는것까지해야함

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,9 @@
         <activity android:name=".MusicAdd.TestParent"
             android:exported="true">
         </activity>
+        <activity android:name=".MusicAdd.PianoMain"
+            android:exported="true">
+        </activity>
         <service
             android:name=".Utils.MusicService"
             android:enabled="true"
