--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,9 @@
         <activity android:name=".MusicAdd.PianoMain"
             android:exported="true">
         </activity>
+        <activity android:name=".MusicAdd.AddCaption"
+            android:exported="true">
+        </activity>
         <service
             android:name=".Utils.MusicService"
             android:enabled="true"
