내가 좋아하는 음악 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,6 +71,9 @@
         <activity android:name=".MusicAdd.AddCaption"
             android:exported="true">
         </activity>
+        <activity android:name=".Library.MyLove"
+            android:exported="true">
+        </activity>
         <service
             android:name=".Utils.MusicService"
             android:enabled="true"
