--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,7 +71,7 @@
         <activity android:name=".MusicAdd.AddCaption"
             android:exported="true">
         </activity>
-        <activity android:name=".Library.MyLove"
+        <activity android:name=".Library.LibraryMain"
             android:exported="true">
         </activity>
         <service
