--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DailyBand"
         tools:targetApi="31"
+        android:windowSoftInputMode = "adjustNothing"
         android:requestLegacyExternalStorage="true">
 
         <activity
@@ -56,9 +57,11 @@
         </activity>
 
         <activity android:name=".MusicAdd.AddMusic"
+            android:windowSoftInputMode="adjustNothing"
             android:exported="true">
         </activity>
         <activity android:name=".MusicAdd.TestAdd"
+            android:windowSoftInputMode="adjustNothing"
             android:exported="true">
         </activity>
 
