--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,11 @@
 
         </activity>
 
+        <activity android:name=".Utils.SharedData"
+            android:exported="true">
+
+        </activity>
+
         <activity android:name=".Login.LoginActivity"
             android:exported="true">
         </activity>
