--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
     implementation 'com.google.firebase:firebase-auth-ktx:22.1.2'
     implementation 'com.google.firebase:firebase-database-ktx:20.2.2'
     testImplementation 'junit:junit:4.13.2'
@@ -50,4 +49,16 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.3.1'
     //텍스트인풋레이아웃
     implementation 'com.google.android.material:material:1.9.0'
+
+
+    //OmRecorder 라이브러리 추가
+    //implementation 'com.kailash09dabhi:om-recorder:1.1.5'
+    //implementation 'com.kailashdabhi:om-recorder:1.1.5'
+    //implementation 'com.github.shetmobile:AndroidAudioRecorder:0.3.1'
+    //implementation 'com.kailashdabhi:om-recorder:1.0.0'
+    //implementation 'com.gitee.chinasoft_ohos:OmRecorder:1.0.0'
+    // https://mvnrepository.com/artifact/com.kailashdabhi/om-recorder
+    //implementation 'com.kailashdabhi:om-recorder:1.1.5'
+    implementation 'com.github.squti:Android-Wave-Recorder:1.7.0'
+    //implementation 'com.github.shetmobile:AndroidAudioRecorder:0.3.1'
 }
