--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,8 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.core:core:1.6.0' // 최신 버전으로 업데이트
+
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -60,5 +62,6 @@ dependencies {
     // https://mvnrepository.com/artifact/com.kailashdabhi/om-recorder
     //implementation 'com.kailashdabhi:om-recorder:1.1.5'
     implementation 'com.github.squti:Android-Wave-Recorder:1.7.0'
-    //implementation 'com.github.shetmobile:AndroidAudioRecorder:0.3.1'
+    implementation 'com.gauravk.audiovisualizer:audiovisualizer:0.9.2'
+    implementation 'com.cleveroad:audiovisualization:1.0.1'
 }
