--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion = "32"/>
@@ -13,7 +14,6 @@
         android:maxSdkVersion="32" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -68,11 +68,14 @@
             android:windowSoftInputMode="adjustNothing"
             android:exported="true">
         </activity>
-        <activity android:name=".MusicAdd.TestAdd"
+        <activity android:name=".ShowMusic.NewPickMusic"
             android:windowSoftInputMode="adjustNothing"
             android:exported="true">
         </activity>
-
+        <activity android:name=".ShowMusic.TestPickMusic"
+            android:windowSoftInputMode="adjustNothing"
+            android:exported="true">
+        </activity>
         <activity android:name=".Setting.SettingActivity"
             android:exported="true">
         </activity>
