--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,7 +75,7 @@
         <activity android:name=".Setting.SettingActivity"
             android:exported="true">
         </activity>
-        <activity android:name=".MusicAdd.CollabAddMusic"
+        <activity android:name=".MusicAdd.TestParent"
             android:exported="true">
         </activity>
         <activity android:name=".MusicAdd.AddCaption"
