프래그먼트로 수정중

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,9 +75,15 @@
         <activity android:name=".Setting.SettingActivity"
             android:exported="true">
         </activity>
+
+        <activity android:name=".Setting.NewSettingActivity"
+            android:exported="true">
+        </activity>
+
         <activity android:name=".MusicAdd.TestParent"
             android:exported="true">
         </activity>
+
         <activity android:name=".MusicAdd.AddCaption"
             android:exported="true">
         </activity>
