콜라보 아예 다운으로

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -80,7 +80,7 @@
             android:exported="true">
         </activity>
 
-        <activity android:name=".MusicAdd.TestParent"
+        <activity android:name=".MusicAdd.CollabAddMusic"
             android:exported="true">
         </activity>
 
