--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,10 @@
             android:exported="true">
 
         </activity>
+        <activity android:name=".Love.LoveActivity"
+            android:exported="true">
+
+        </activity>
 
         <activity android:name=".Utils.SharedData"
             android:exported="true">
