기본적인 것들 다 연결완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,10 @@
             android:exported="true">
 
         </activity>
+        <activity android:name=".Collection.CollectionActivity"
+            android:exported="true">
+
+        </activity>
 
         <activity android:name=".Utils.SharedData"
             android:exported="true">
