--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/icon_img"
+        android:icon="@mipmap/icon_img_round"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/icon_img_round"
         android:supportsRtl="true"
