프로그레스바 반절함

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,10 @@
             android:exported="true">
         </activity>
 
+        <activity android:name=".Home.Test"
+            android:exported="true">
+        </activity>
+
         <activity android:name=".Login.RegisterActivity"
             android:exported="true">
         </activity>
