--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,6 @@ dependencies {
     implementation 'com.gauravk.audiovisualizer:audiovisualizer:0.9.2'
 
     implementation 'com.scwang.wave:MultiWaveHeader:1.0.0'
+    implementation 'com.github.cjhandroid:WaveProgressBar:v1.0.0'
+    implementation 'com.mikhaellopez:circularfillableloaders:1.4.0'
 }
