--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,6 +83,7 @@
         </activity>
 
         <activity android:name=".Setting.NewSettingActivity"
+            android:windowSoftInputMode="adjustPan"
             android:exported="true">
         </activity>
         <activity android:name=".MusicAdd.AddCaption"
