--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,5 @@ dependencies {
     implementation 'com.scwang.wave:MultiWaveHeader:1.0.0'
     implementation 'com.github.cjhandroid:WaveProgressBar:v1.0.0'
     implementation 'com.mikhaellopez:circularfillableloaders:1.4.0'
+    implementation 'com.github.angads25:toggle:1.1.0'
 }
