--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,16 +42,19 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation(platform("com.google.firebase:firebase-bom:32.3.1"))
-    implementation("com.google.firebase:firebase-database")
-    implementation("com.google.firebase:firebase-analytics")
-    implementation 'com.google.firebase:firebase-storage'
+    implementation'com.google.firebase:firebase-database:20.3.0'
+    implementation'com.google.firebase:firebase-analytics:21.5.0'
+    implementation 'com.google.firebase:firebase-storage:20.3.0'
+
+    implementation 'com.google.firebase:firebase-inappmessaging-display:20.4.0'
+    implementation 'com.google.firebase:firebase-inappmessaging:20.4.0'
 
     //원형 이미지뷰 가져오기
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     //리사이클러뷰
     implementation 'androidx.recyclerview:recyclerview:1.3.2'
     //텍스트인풋레이아웃
-    implementation 'com.google.android.material:material:1.10.0'
+    implementation 'com.google.android.material:material:1.11.0'
 
 
     //OmRecorder 라이브러리 추가
